--- a/css/exhibits.css
+++ b/css/exhibits.css
@@ -2,13 +2,12 @@
   padding: 10px;
 }
 
-#events__hamburger,
-#exhibits__hamburger {
-  display: none;
+.hamburger-label,
+.read-more {
+  display: block;
 }
 
 .hamburger-label {
-  display: block;
   color: #fff;
 }
 
@@ -26,6 +25,8 @@
   transition: transform 0.5s;
 }
 
+#events__hamburger,
+#exhibits__hamburger,
 #events__hamburger:checked ~ .events__list,
 #exhibits__hamburger:checked ~ .exhibits__list {
   display: none;
@@ -37,7 +38,9 @@
 }
 
 .events,
-.exhibits {
+.exhibits,
+.events__list,
+.exhibits__list {
   padding-bottom: 20px;
 }
 
@@ -46,7 +49,6 @@
   display: grid;
   gap: 10px;
   background-color: #fdf7f2;
-  padding-bottom: 20px;
 }
 
 .events__list section,
@@ -54,8 +56,4 @@
   padding: 5px;
   border: 1px solid;
   background-color: #fff;
-}
-
-.read-more {
-  display: block;
 }
