--- a/css/media.css
+++ b/css/media.css
@@ -159,6 +159,11 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .events__list h2,
+  .exhibits__list h2 {
+    margin-top: 0;
+  }
+
   /*Events
   __________________________________*/
   .event__details {
@@ -190,7 +195,6 @@
 
   .cta {
     grid-column: -1/1;
-    max-width: 200px;
     margin: 0 auto;
   }
 
