--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,14 @@ html {
 body {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  margin: 0;
   min-height: 100vh;
   font-family: "Segoe UI", Optima, Verdana, sans-serif;
+}
+
+nav ul,
+body,
+footer ul {
+  margin: 0;
 }
 
 h1,
@@ -23,7 +28,8 @@ h1 {
   font-size: 2rem;
 }
 
-h2 {
+h2,
+footer h3 {
   margin-bottom: 0;
 }
 
@@ -74,7 +80,6 @@ nav {
 nav ul,
 footer ul {
   list-style-type: none;
-  margin: 0;
   padding: 0;
 }
 
@@ -126,10 +131,6 @@ footer {
 
 footer a {
   color: #000;
-}
-
-footer h3 {
-  margin-bottom: 0;
 }
 
 footer p {
