--- a/css/exhibits.css
+++ b/css/exhibits.css
@@ -8,11 +8,8 @@
 }
 
 .hamburger-label {
-  color: #fff;
-}
-
-.hamburger-label span {
   background-color: #1c606d;
+  color: #fff;
   font-size: 1.2rem;
   font-weight: bold;
   display: flex;
@@ -20,7 +17,7 @@
   justify-content: space-between;
 }
 
-.hamburger-label span img {
+.hamburger-label img {
   width: 30px;
   transition: transform 0.5s;
 }
