--- a/css/styles.css
+++ b/css/styles.css
@@ -92,17 +92,14 @@ a:hover,
   text-decoration: underline;
 }
 
-header img {
-  width: 20px;
-}
-
 .logo {
   width: 40px;
+  height: 40px;
 }
 
 nav {
   position: absolute;
-  top: 64px;
+  top: 60px;
   left: 0;
 }
 
@@ -112,6 +109,12 @@ nav li {
 
 nav a {
   padding: 10px;
+}
+
+.hamburger-nav__label img,
+nav a div {
+  width: 20px;
+  height: 20px;
 }
 
 .read-more {
