--- a/css/exhibits.css
+++ b/css/exhibits.css
@@ -16,7 +16,8 @@
   justify-content: space-between;
 }
 
-.hamburger-label div {
+.hamburger-label figure {
+  margin: 0;
   width: 30px;
   height: 30px;
   transition: transform 0.5s;
@@ -29,8 +30,8 @@
   display: none;
 }
 
-#events__hamburger:checked ~ .hamburger-label div,
-#exhibits__hamburger:checked ~ .hamburger-label div {
+#events__hamburger:checked ~ .hamburger-label figure,
+#exhibits__hamburger:checked ~ .hamburger-label figure {
   transform: rotate(-180deg);
 }
 
