--- a/css/events.css
+++ b/css/events.css
@@ -20,4 +20,11 @@ main > section {
 
 h1 {
   grid-column: -1/1;
+  text-align: center;
+}
+
+.event__details div {
+  max-width: 360px;
+  display: block;
+  margin: 0 auto;
 }
