--- a/css/visit.css
+++ b/css/visit.css
@@ -2,15 +2,10 @@
   padding: 0 10px;
 }
 
-iframe,
-main img {
-  display: block;
+.location__map,
+.accessibility__image {
   width: 90%;
   margin: 20px auto;
-}
-
-main img {
-  max-width: 225px;
 }
 
 ul,
@@ -21,6 +16,11 @@ p {
 ul {
   list-style-type: none;
   padding: 0;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .location__address {
@@ -44,8 +44,10 @@ ul {
 .accessibility__shop {
   grid-area: shop;
 }
+
 .accessibility__image {
   grid-area: image;
+  max-width: 225px;
 }
 
 .information:last-of-type {
